--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -172,6 +172,114 @@
             }
         }
     }
+
+    >.our__products__container {
+        margin: 40px auto;
+
+        >p {
+            &:nth-child(1) {
+                color: #999999;
+                text-align: center;
+                font-size: 22px;
+            }
+        }
+
+        >h2 {
+            text-align: center;
+            font-size: 32px;
+        }
+    }
+
+    .products__container_grid__row {
+        @include grid(repeat(4, 1fr), 30px, 30px);
+        margin-bottom: 30px;
+
+        @include for_breakpoint(LargeTablet) {
+            @include grid(repeat(3, 1fr), 30px, 30px)
+        }
+
+        @include for_breakpoint(MidTablet) {
+            @include grid(repeat(2, 1fr), 30px, 30px)
+        }
+
+        @include for_breakpoint(mobile) {
+            @include grid(repeat(2, 1fr), 5px, 5px)
+        }
+
+        >div {
+            padding: 20px 15px;
+            background-color: white;
+            @include flex(column, flex-start);
+            cursor: pointer;
+            border: 1px solid rgba(0, 0, 0, 0.10);
+            border-radius: 12px;
+
+            // box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            &:hover {
+                box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            }
+
+            @include for_breakpoint(mobile) {
+                padding: 20px 8px;
+            }
+
+            >img {
+                width: 80%;
+                margin: auto;
+            }
+
+            >div {
+                border-top: 1px solid rgba(0, 0, 0, 0.035);
+
+                >h3 {
+                    font-size: 18px;
+                    text-align: left;
+                    margin-top: 10px;
+                    font-weight: 300;
+                    height: 65px;
+
+                    @include for_breakpoint(mobile) {
+                        font-size: 14px;
+                        height: auto;
+                    }
+                }
+
+                >p {
+                    margin-top: 10px;
+
+                    &:nth-child(1) {
+                        margin-top: 10px;
+                        font-size: 16px;
+                        font-weight: 600;
+                    }
+
+                    &:nth-child(2) {
+                        margin-top: 10px;
+                        font-size: 16px;
+                        font-weight: 600;
+                    }
+
+                    >.old__price {
+                        text-decoration: line-through;
+                        color: #c1121f;
+                    }
+
+                    >.save__price {
+                        color: #007f5f;
+                        font-weight: 600;
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            >button {
+                margin-top: 15px;
+                @include button($bg: #003049, $w: 100%, $h: 44px, $br: 12px);
+                font-size: 16px;
+                text-transform: uppercase !important;
+            }
+        }
+    }
 }
 
 // Dots component starts here
