added navbar menu

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 // @import './mixin';
 @import './Styles/Home.scss';
+@import './Styles/Header.scss';
 
 // Color Palette
 // #780000, #c1121f, #fdf0d5, #003049, #669bbc
