--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -4,6 +4,10 @@
     background-color: rgba(0, 48, 73, 0.65);
     color: white;
     padding: 8px 0px;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+    backdrop-filter: blur(30px);
 
     .rfm-child {
         font-family: "Merienda", serif;
@@ -15,7 +19,7 @@
 .container {
     max-width: 1440px;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: 9.4rem;
     padding: 0px 15px;
 
     >div {
@@ -25,7 +29,9 @@
                     >img {
                         width: 100%;
                         object-fit: cover;
+                        object-position: top center;
                         border-radius: 24px;
+                        height: 480px;
                     }
                 }
             }
