--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -22,6 +22,37 @@
     margin-top: 9.4rem;
     padding: 0px 15px;
 
+    >.all__products {
+        @include flex();
+        margin-bottom: 40px;
+
+        >button {
+            margin-top: 30px;
+            @include button(white, $br: 30px, $h: 48px, $w: 250px, $Fs: 16px);
+            border: 1px solid #003049;
+            text-transform: capitalize !important;
+            color: #999999 !important;
+            border: 1px solid rgba(0, 48, 73, 0.25) !important;
+            border-radius: 40px !important;
+
+            &:hover {
+                background-color: #003049 !important;
+                color: white !important;
+            }
+
+            >span {
+                font-size: 18px !important;
+            }
+        }
+    }
+
+    .product__bgImage {
+        height: 500px;
+        width: 100%;
+        background-image: url('../Assets/OurProducts/slide.png');
+        background-size: cover;
+    }
+
     >div {
         ul {
             >li {
@@ -327,6 +358,75 @@
     }
 }
 
+.sign__up__container {
+    background-image: url('../Assets/OurProducts/banner-coutdown_1500x.webp');
+    background-size: cover;
+    padding: 100px 20px;
+    background-position: left;
+    margin-bottom: 0px;
+    color: white;
+    @include flex(column);
+    text-align: center;
+
+    >img {
+        width: 52px;
+    }
+
+    >h2 {
+        font-size: 42px;
+
+        @include for_breakpoint(mediumTablet) {
+            >br {
+                display: none;
+            }
+
+            font-size: 28px;
+        }
+    }
+
+    >p {
+        font-size: 16px;
+        margin-top: 5px;
+    }
+
+    >div {
+        margin-top: 20px;
+        @include grid(400px 1fr, 0px, 0px);
+
+        @include for_breakpoint(mediumTablet) {
+            @include grid(1fr 1fr, 0px, 0px)
+        }
+
+        @include for_breakpoint(mobile) {
+            @include grid(1fr, 0px, 0px)
+        }
+
+        input {
+            background-color: rgba(255, 255, 255, 1);
+            border: none;
+            width: 100%;
+            height: 52px;
+            outline: none;
+            padding: 0px 15px;
+            font-size: 16px;
+        }
+
+        >button {
+            background-color: #003049;
+            border-radius: 0px !important;
+            width: 190px !important;
+            height: 52px;
+            font-family: "Lexend", serif !important;
+            font-size: 16px !important;
+            color: white;
+
+            @include for_breakpoint(mobile) {
+                margin: 20px auto;
+            }
+        }
+    }
+}
+
 // Dots component starts here
 .react-multiple-carousel__arrow {
     z-index: 2 !important;
@@ -358,6 +458,7 @@
 
 
 /* CSS */
+
 
 .button-92 {
     background-color: #ffff;
