added cart icon

--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -60,7 +60,7 @@
             >li {
                 >.carousel__img {
                     >img {
-                        width: 100%;
+                        width: 100% !important;
                         object-fit: cover;
                         object-position: top center;
                         border-radius: 24px;
