--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,5 +1,4 @@
 .header__wrapper {
-    // top: 36px !important;
     background-color: #223049 !important;
 
     >div {
@@ -17,6 +16,14 @@
 
         // }
     }
+}
+
+.admin__header{
+    top: 0px !important;
+}
+
+.user__header{
+    top: 36px !important;
 }
 
 .left__row__header {
