--- a/src/Styles/Product.scss
+++ b/src/Styles/Product.scss
@@ -228,6 +228,46 @@
     >div {
         // border: 1px solid black;
         height: auto;
+
+        &:nth-child(2) {
+            >.desc-reviews-tab-grid-row {
+                @include grid(repeat(2, 1fr), 30px);
+                max-width: fit-content;
+                margin: 20px 0;
+
+                >div {
+                    >p {
+                        font-size: 18px;
+                    }
+                }
+            }
+
+            >.product_count {
+                display: grid;
+                grid-template-columns: 32px 80px 32px;
+                gap: 10px;
+                margin-top: 20px;
+
+                >div {
+                    >button {
+                        background-color: #212121;
+                        width: 32px;
+                        height: 32px;
+                        color: white;
+                        border-radius: 50%;
+                        min-width: 32px;
+                    }
+
+                    >input {
+                        width: 80px;
+                        height: 32px;
+                        border: none;
+                        padding: 0px 10px;
+                        text-align: center;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -245,10 +285,115 @@
 }
 
 .react-slider__ul>.active {
-    border: 1px solid #003049;
+    border: 1px solid #212121;
 }
 
 .react-slider__btnNext,
 .react-slider__btnPrev {
-    background-color: #003049 !important;
+    background-color: #212121 !important;
+}
+
+.tabs {
+    margin-top: 20px;
+
+    >div {
+        &:nth-child(3) {
+            >div {
+                >button {
+                    font-family: 'Montserrat' !important;
+                    font-weight: 600 !important;
+                }
+            }
+        }
+    }
+}
+
+.description_content {
+    margin-top: 20px;
+
+    >h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-size: 22px;
+        font-weight: 500;
+        margin: 20px 0px 10px 0px;
+    }
+
+    >p {
+        font-size: 16px;
+        color: #212121;
+        margin-bottom: 10px;
+        margin-top: 5px;
+        line-height: 1.3195;
+        letter-spacing: 0.3px;
+    }
+}
+
+.reviews__grid__row {
+    @include grid(repeat(2, 1fr), 30px);
+    grid-column-gap: 80px !important;
+
+    @include for_breakpoint(tablet) {
+        @include grid(repeat(1, 1fr), 30px)
+    }
+
+    div {
+        &:nth-child(1) {
+            position: relative;
+            top: 0;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                right: -50px;
+                height: 100%;
+                width: 2px;
+                background-color: rgba(0, 0, 0, 0.05);
+            }
+
+            .review__input__row {
+                >.rating_container{
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                }
+                >textarea {
+                    width: 100%;
+                    border: 1px solid rgba(0, 0, 0, 0.05);
+                    font-family: "Montserrat";
+                    font-weight: 400;
+                    font-size: 16px;
+                    outline: none;
+                    // margin-top: 20px;
+                    padding: 20px;
+                    border-radius: 5px;
+                }
+
+                div {
+                    @include flex();
+
+                    >button {
+                        background-color: #212121 !important;
+                        width: 160px;
+                        height: 44px;
+                        border-radius: 50px;
+                        color: white;
+                        margin-top: 20px;
+                        font-weight: 600;
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+
+        &:nth-child(2) {
+            >h3 {
+                font-weight: 600;
+                font-size: 20px;
+            }
+        }
+    }
 }
