--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,5 +1,6 @@
 .header__wrapper {
-    background-color: #223049 !important;
+    // background-color: #223049 !important;
+    background-color: #212121 !important;
 
     >div {
 
@@ -83,7 +84,7 @@
         border-radius: 50px;
         font-size: 12px;
         font-weight: 700;
-        color: #223049;
+        color: #212121;
     }
 }
 
