fixed logo issue

--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -90,7 +90,7 @@
 
         >img {
             width: 240px;
-            mix-blend-mode: difference;
+            mix-blend-mode: color-dodge;
             border-radius: 20px;
             margin-bottom: 20px;
         }
