fixed logo issue

--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -11,8 +11,8 @@
 
     .rfm-child {
         font-family: "Merienda", serif;
-        font-size: 14px;
-        letter-spacing: 0.05rem;
+        font-size: 12px !important;
+        letter-spacing: 0.5px;
     }
 }
 
