--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -19,6 +19,14 @@
 
 }
 
+.rfm-child,
+.rfm-marquee-container:active div,
+.rfm-marquee {
+    font-family: "Merienda", serif;
+    font-size: 12px !important;
+    letter-spacing: 0.5px;
+}
+
 .all__products {
     @include flex();
     margin-bottom: 40px;
