--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -58,6 +58,10 @@
     margin: auto;
     margin-top: 7.4rem;
     padding: 0px 15px;
+    
+    @include for_breakpoint(mobile){
+        margin-top: 5rem;
+    }
 
 
 
@@ -76,8 +80,12 @@
                         width: 100% !important;
                         object-fit: cover;
                         object-position: top center;
-                        border-radius: 24px;
+                        border-radius: 2px;
                         height: 480px;
+
+                        @include for_breakpoint(mobile){
+                            object-position: left;
+                        }
                     }
                 }
             }
