added white color

--- a/src/Styles/Product.scss
+++ b/src/Styles/Product.scss
@@ -425,3 +425,7 @@
     color: white !important;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important;
 }
+
+.MuiRating-icon {
+    color: white !important;
+}
