--- a/src/Styles/Product.scss
+++ b/src/Styles/Product.scss
@@ -426,6 +426,6 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important;
 }
 
-.MuiRating-icon {
+.MuiRating-iconEmpty {
     color: white !important;
 }
