--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -58,8 +58,8 @@
     margin: auto;
     margin-top: 7.4rem;
     padding: 0px 15px;
-    
-    @include for_breakpoint(mobile){
+
+    @include for_breakpoint(mobile) {
         margin-top: 5rem;
     }
 
@@ -76,15 +76,104 @@
         ul {
             >li {
                 >.carousel__img {
+                    position: relative;
+                    top: 0;
+
                     >img {
+                        &:nth-child(1) {
+                            display: block;
+
+                            @include for_breakpoint(tablet) {
+                                display: none;
+                            }
+                        }
+
+                        &:nth-child(2) {
+                            display: none;
+
+                            @include for_breakpoint(tablet) {
+                                display: block;
+                                object-position: center;
+                                height: 580px;
+                            }
+                        }
+
                         width: 100% !important;
                         object-fit: cover;
                         object-position: top center;
-                        border-radius: 2px;
+                        border-radius: 22px;
                         height: 480px;
 
-                        @include for_breakpoint(mobile){
+                        @include for_breakpoint(mobile) {
                             object-position: left;
+                        }
+                    }
+
+                    >.content__overlay {
+                        position: absolute;
+                        top: 50%;
+                        left: 0;
+                        padding: 0px 40px;
+                        transform: translateY(-50%);
+
+                        @include for_breakpoint(mobile) {
+                            padding: 0px 20px;
+                        }
+
+                        >h1 {
+                            color: white;
+                            font-size: 42px;
+                            font-weight: 600;
+                            margin-bottom: 10px;
+                            letter-spacing: 0.5px;
+
+                            @include for_breakpoint(mobile) {
+                                >br {
+                                    display: none;
+                                }
+                            }
+                        }
+
+                        p {
+                            font-weight: 400;
+                            letter-spacing: 0.5px;
+                            line-height: 1.3195;
+                            color: white;
+
+                            @include for_breakpoint(mobile) {
+                                >br {
+                                    display: none;
+                                }
+                            }
+                        }
+
+                        >button {
+                            margin-top: 20px;
+                            @include button(rgba(0, 0, 0, 0.2), $h: 40px);
+                            padding: 0px 20px;
+                            backdrop-filter: blur(30px);
+                            transition: 0.5s ease-in-out;
+
+                            >svg {
+                                font-size: 22px;
+                                transition: 0.5s ease-in-out;
+                            }
+
+                            &:hover {
+                                @include button(rgba(255, 255, 255, 0.4), $h: 40px);
+                                backdrop-filter: blur(50px);
+
+                                >svg {
+                                    margin-left: 5px;
+                                }
+                            }
+
+                            @include for_breakpoint(mobile) {
+                                padding: 0px 10px;
+                                margin-top: 8px;
+                                backdrop-filter: blur(30px);
+                                font-size: 12px;
+                            }
                         }
                     }
                 }
@@ -93,7 +182,7 @@
     }
 
     .categories__grid__row {
-        @include grid(repeat(3, 1fr), $gcg: 40px);
+        @include grid(repeat(6, 1fr), $gcg: 40px);
         max-width: fit-content;
         margin: 30px auto 70px auto;
 
@@ -101,7 +190,7 @@
             margin: 30px auto 30px auto;
         }
 
-        @include for_breakpoint(mobile) {
+        @include for_breakpoint(tablet) {
             @include flex(row, center, flex-start);
             max-width: 100%;
             overflow-x: auto;
@@ -114,6 +203,10 @@
                 text-align: center;
                 font-size: 18px !important;
                 font-weight: 500;
+
+                @include for_breakpoint(tablet) {
+                    white-space: nowrap;
+                }
 
                 @include for_breakpoint(mobile) {
                     font-size: 14px !important;
@@ -134,6 +227,23 @@
             height: auto;
             position: relative;
             top: 0;
+
+            &:nth-child(1),
+            &:nth-child(3) {
+                transform: scale(0.9);
+
+                @include for_breakpoint(tablet) {
+                    transform: initial;
+                }
+            }
+
+            &:nth-child(2) {
+                transform: scale(1.05);
+
+                @include for_breakpoint(tablet) {
+                    transform: initial;
+                }
+            }
 
             >img {
                 object-fit: cover;
@@ -308,6 +418,7 @@
             >img {
                 width: 80%;
                 margin: auto;
+                border-radius: 20px;
             }
 
             >.svg__icon {
